WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
289539
Fix crash when making a _WKDataTask with an invalid URL after
289946@main
https://bugs.webkit.org/show_bug.cgi?id=289539
Summary
Fix crash when making a _WKDataTask with an invalid URL after 289946@main
Alex Christensen
Reported
2025-03-11 10:00:35 PDT
rdar://145127186
Attachments
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2025-03-11 10:01:38 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/42260
EWS
Comment 2
2025-03-11 11:57:10 PDT
Committed
291964@main
(47ce430674d2): <
https://commits.webkit.org/291964@main
> Reviewed commits have been landed. Closing PR #42260 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug