Fix crash when making a _WKDataTask with an invalid URL after 289946@main https://bugs.webkit.org/show_bug.cgi?id=289539 rdar://145127186

Reviewed by Matthew Finkel.

* Source/WebKit/NetworkProcess/cocoa/NetworkSessionCocoa.mm:
(WebKit::NetworkSessionCocoa::dataTaskWithRequest):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/NetworkProcess.mm:
(TEST(_WKDataTask, Basic)):

Canonical link: https://commits.webkit.org/291964@main